# manmoney

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/layout/: PageHeader.tsx  Sidebar.tsx
src/components/pages/: Accounts.tsx  Analytics.tsx  Budgets.tsx  Categories.tsx  Dashboard.tsx  Goals.tsx  Recurring.tsx  Settings.tsx  Transactions.tsx
src/components/ui/: CategoryIcon.tsx  EmptyState.tsx  Modal.tsx  StatCard.tsx  Toast.tsx
src/lib/: api.ts  utils.ts
src/store/: useAppStore.ts
src/types/: index.ts
wiki/: Accounts.md  Analytics.md  Budgets.md  Categories.md  Dashboard.md  Getting-Started.md  Home.md  README.md  Recurring-Transactions.md  Savings-Goals.md  Settings-and-Data.md  Tips-and-Best-Practices.md  Transactions.md  Troubleshooting.md  _Footer.md  _Sidebar.md
